Переработать редактор датасетов
